# gul14

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  CppProperties.json  Doxyfile  GSL_utilities.html  LIBNO  Makefile  README.md  SlidingBuffer_8h__dep__incl.md5  SlidingBuffer_8h__incl.map  SmallVector_8h.html  SmallVector_8h__dep__incl.map  SmallVector_8h__incl.map  Trigger_8cc.html  Trigger_8cc__incl.map  Trigger_8h__incl.map  bit__manip_8h__dep__incl.md5  bit__manip_8h__incl.md5  case__ascii_8cc.html  case__ascii_8cc__incl.map  case__ascii_8cc__incl.md5  case__ascii_8h.html  case__ascii_8h__dep__incl.map  case__ascii_8h__incl.md5  case__ascii_8h_source.html  cat_8cc.html  cat_8cc__incl.map  cat_8cc__incl.md5  cat_8h.html  cat_8h__dep__incl.map  cat_8h__incl.map  classgul14_1_1ConvertingStringView-members.html  classgul14_1_1ConvertingStringView.html  classgul14_1_1FailToInstantiate.html  classgul14_1_1SlidingBuffer-members.html  classgul14_1_1SlidingBuffer.html  classgul14_1_1SlidingBuffer_1_1SlidingBufferIterator-members.html  classgul14_1_1SlidingBuffer_1_1SlidingBufferIterator.html  (+99 more)
.github/workflows/: build-and-run-tests-posix.yml  build-and-run-tests-windows.yml  ci.yml  doxygen.yml  testposix.yml  testwindows.yml  windows.yml
.gitlab-ci/: build.yml  sync.yml
data/: Doxyfile.in  doxygen.h  doxygen_footer.html  doxygen_layout.xml  gul.cdr  how_to_create_a_vcpkg_port.txt  meson.build  style.css
debian/: changelog  changelog.gen  changelog.in  control  control.in  copyright  copyright.in  libgul-dev.install  libgul-dev.install.in  libgul.install  libgul14.install.in  meson.build  rules  rules.in
docs/: CNAME  GSL_utilities.html  SlidingBuffer_8h.html  SlidingBuffer_8h__dep__incl.map  SlidingBuffer_8h__incl.map  SlidingBuffer_8h__incl.md5  SlidingBuffer_8h_source.html  SmallVector_8h.html  SmallVector_8h__dep__incl.map  SmallVector_8h__dep__incl.md5  SmallVector_8h__incl.map  SmallVector_8h__incl.md5  SmallVector_8h_source.html  ThreadPool_8cc.html  ThreadPool_8cc__incl.map  ThreadPool_8cc__incl.md5  ThreadPool_8h.html  ThreadPool_8h__dep__incl.map  ThreadPool_8h__dep__incl.md5  ThreadPool_8h__incl.map  ThreadPool_8h__incl.md5  ThreadPool_8h_source.html  Trigger_8cc.html  Trigger_8cc__incl.map  Trigger_8cc__incl.md5  Trigger_8h.html  Trigger_8h__dep__incl.map  Trigger_8h__dep__incl.md5  Trigger_8h__incl.map  Trigger_8h__incl.md5  Trigger_8h_source.html  annotated.html  bit__manip_8h.html  bit__manip_8h__dep__incl.map  bit__manip_8h__incl.map  bit__manip_8h_source.html  bit_manipulation.html  case__ascii_8cc.html  case__ascii_8cc__incl.map  case__ascii_8h.html  (+343 more)
examples/: meson.build  thread_pool.cc  trim.cc
include/: gul.h  meson.build
include/gul/: SlidingBuffer.h  Trigger.h  bit_manip.h  case_ascii.h  cat.h  catch.h  escape.h  finalizer.h  hexdump.h  internal.h  join_split.h  num_util.h  optional.h  replace.h  span.h  starts_with_ends_with.h  statistics.h  string_util.h  string_view.h  substring_checks.h  time_util.h  to_number.h  tokenize.h  trim.h  type_name.h  version.h
include/gul14/: SlidingBuffer.h  SmallVector.h  ThreadPool.h  Trigger.h  array_util.h  bit_manip.h  case_ascii.h  cat.h  date.h  escape.h  expected.h  finalizer.h  gcd_lcm.h  gul.h  hexdump.h  internal.h  join_split.h  meson.build  num_util.h  optional.h  replace.h  ryu.h  span.h  statistics.h  string_util.h  string_view.h  substring_checks.h  time_util.h  to_number.h  tokenize.h  traits.h  trim.h  type_name.h  utility.h  variant.h  version.h
nbproject/: project.xml
resources/: Doxyfile  doxywrap  gul_big_variant.xcf  gul_variant.xcf  meson.build  style.css
source/: Trigger.cc  cat.cc  gitversion.cc.in  join_split.cc  meson.build  string_util.cc  time_util.cc  tokenize.cc  trim.cc  version.cc.in
src/: ThreadPool.cc  Trigger.cc  case_ascii.cc  cat.cc  escape.cc  join_split.cc  meson.build  replace.cc  starts_with_ends_with.cc  string_util.cc  time_util.cc  to_number.cc  tokenize.cc  trim.cc  version.cc.in
src/ryu/: meson.build  ryu.h
tests/: lint  meson.build  test_SlidingBuffer.cc  test_SmallVector.cc  test_ThreadPool.cc  test_Trigger.cc  test_all.cc  test_backports.cc  test_bit_manip.cc  test_case_ascii.cc  test_cat.cc  test_escape.cc  test_expected.cc  test_finalizer.cc  test_gcd_lcm.cc  test_hexdump.cc  test_join_split.cc  test_main.cc  test_namespace.cc  test_num_util.cc  test_optional.cc  test_replace.cc  test_self_containment.cc.in  test_split.cc  test_starts_with_ends_with.cc  test_statistics.cc  test_string_escape.cc  test_string_replace.cc  test_string_split.cc  test_string_substitute.cc  test_string_util.cc  test_substring_checks.cc  test_time_util.cc  test_to_number.cc  test_tokenize.cc  test_traits.cc  test_trim.cc  test_type_name.cc  test_variant.cc  try_sleep2.cc
tests/inclusion/: README  incl_SlidingBuffer.cc  incl_Trigger.cc  incl_case_ascii.cc  incl_cat.cc  incl_escape.cc  incl_finalizer.cc  incl_hexdump.cc  incl_join_split.cc  incl_num_util.cc  incl_replace.cc  incl_statistics.cc  incl_substring_checks.cc  incl_time_util.cc  incl_to_number.cc  incl_tokenize.cc  incl_trim.cc  incl_type_name.cc  meson.build
tests/ryu/: d2fixed_test.cc  d2s_intrinsics_test.cc  d2s_table_test.cc  d2s_test.cc  f2s_test.cc  generic_128_test.cc  meson.build
tools/: add_compat_link.py.in  changelogger  config_checker.in  distill_junit_output  doxywrap  make_vs.bat  meson.build  single_gul
