# Meson options definitions

option('tests', type : 'boolean', value : true,
       description : 'Generate tests')
option('docs', type : 'boolean', value : true,
       description : 'Generate documentation via Doxygen')
option('deb-name', type : 'string', value : '@0@',
       description : 'Debian package name')
option('deb-dev-name', type : 'string', value : '@0@-dev',
       description : 'Debian package name for development package')
option('deb-vers-ext', type : 'boolean', value : false,
       description : 'Debian package will use external versioning')
option('deb-vers-patch', type : 'boolean', value : false,
       description : 'Debian package name will contain patchlevel')
